# shredtop

./: BACKLOG.md  CLAUDE.md  Cargo.toml  README.md  probe.toml
.github/workflows/: build.yml  release.yml
agents/: shred-watcher.md  shredder.md
crates/shred-ingest/: Cargo.toml
crates/shred-ingest/src/: coverage.rs  decoder.rs  fan_in.rs  geyser_source.rs  jito_source.rs  lib.rs  metrics.rs  receiver.rs  rpc_source.rs  shred_race.rs  source.rs  source_metrics.rs
src/: analyze.rs  bench.rs  capture.rs  capture_status.rs  cli.rs  color.rs  config.rs  discover.rs  main.rs  metrics_server.rs  monitor.rs  run.rs  service.rs  status.rs  uninstall.rs  upgrade.rs
